--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
 <body>
   <header>
     <img src="imagenes/logo-cuadrado.png" alt="Logo Fuego Presente" class="logo" />
-    <h1>Bienvenide a Fuego Presente</h1>
-    <p class="intro">Si te tratas bien, aquí tienes tu lugar. Sin máscaras, sin prisas, solo deseo real y presente.</p>
+    <nav>
+      <a href="#inicio">Inicio</a>
+      <a href="#productos">Productos</a>
+      <a href="#experiencias">Experiencias</a>
+      <a href="#sobremi">Sobre mí</a>
+    </nav>
   </header>
 
   <main>
-    <section>
+    <section id="inicio">
+      <h1>Bienvenide a Fuego Presente</h1>
+      <p class="intro">Si te tratas bien, aquí tienes tu lugar. Sin máscaras, sin prisas, solo deseo real y presente.</p>
+    </section>
+
+    <section id="sobremi">
       <h2>Soy Sandra. No vine a complacer, vine a encender.</h2>
       <p>Fuego Presente no empezó en un Excel. Empezó en mis tripas. Hoy tiene estructura, alma y muchas ganas de prenderlo todo.<br>
       Estudio sexología, pero no doy lecciones. Prefiero prender conversaciones, provocar preguntas y acompañar cuerpos que quieren sentirse, no solo verse.<br>
@@ -23,110 +32,28 @@
       Si tú también estás en ese punto… pasa, aquí no vendemos humo, encendemos ganas.</p>
     </section>
 
-    <section class="productos">
-      <h2>Feromonas & Magia</h2>
-      <div class="producto">
-        <img src="imagenes/afrodita.jpg" alt="Afrodita">
-        <h3>Afrodita</h3>
-        <p>Aceite sensual con feromonas, inspirado en diosas con ganas.</p>
-        <button>Yo quiero</button>
-      </div>
-      <div class="producto">
-        <img src="imagenes/apolo.jpg" alt="Apolo">
-        <h3>Apolo</h3>
-        <p>Toque masculino y salvaje. Para quienes no temen provocar.</p>
-        <button>Yo quiero</button>
-      </div>
-      <div class="producto">
-        <img src="imagenes/aromatizador.jpg" alt="Aromatizador">
-        <h3>Aromatizador</h3>
-        <p>Ambientador que despierta algo más que olores.</p>
-        <button>Yo quiero</button>
-      </div>
-      <div class="producto">
-        <img src="imagenes/incienso.jpg" alt="Incienso">
-        <h3>Incienso</h3>
-        <p>Ritual aromático para encender tus espacios (y otros sentidos).</p>
-        <button>Yo quiero</button>
-      </div>
+    <section id="productos">
+      <h2>Productos</h2>
+
+      <h3>Feromonas & Magia</h3>
+      <div class="producto"><img src="imagenes/afrodita.jpg"><h4>Afrodita</h4><p>Aceite con feromonas. Diosa style.</p><button>Yo quiero</button></div>
+      <div class="producto"><img src="imagenes/apolo.jpg"><h4>Apolo</h4><p>Fuerza, magnetismo y ganas de más.</p><button>Yo quiero</button></div>
+
+      <h3>Fuego al Tacto</h3>
+      <div class="producto"><img src="imagenes/liquido-vibrador.jpg"><h4>Líquido vibrador</h4><p>Cosquilleo que te sube la temperatura.</p><button>Yo quiero</button></div>
+      <div class="producto"><img src="imagenes/like-a-virgin.jpg"><h4>Like a Virgin</h4><p>Curiosidad encendida y efecto tonificante.</p><button>Yo quiero</button></div>
+
+      <h3>Packs Ritual</h3>
+      <div class="producto"><img src="imagenes/encenderte.jpg"><h4>Encenderte</h4><p>Feromonas, vela y líquido vibrador.</p><button>Yo quiero</button></div>
+
+      <h3>Placer Compartido</h3>
+      <div class="producto"><img src="imagenes/plug-anal.jpg"><h4>Plug Anal</h4><p>Vibración para todos los puntos calientes.</p><button>Yo quiero</button></div>
     </section>
 
-    <section class="productos">
-      <h2>Fuego al Tacto</h2>
-      <div class="producto">
-        <img src="imagenes/liquido-vibrador.jpg" alt="Líquido vibrador">
-        <h3>Líquido vibrador</h3>
-        <p>Ese cosquilleo que no engaña. Vibra, calienta y hace que te quedes.</p>
-        <button>Yo quiero</button>
-      </div>
-      <div class="producto">
-        <img src="imagenes/aceite-nuei.jpg" alt="Aceite masaje Nueï">
-        <h3>Aceite de masaje Nueï</h3>
-        <p>Caricia líquida con aroma irresistible. Cuidado y deseo en frasco.</p>
-        <button>Yo quiero</button>
-      </div>
-      <div class="producto">
-        <img src="imagenes/penis-xxl.jpg" alt="Penis XXL">
-        <h3>Penis XXL</h3>
-        <p>Potenciador masculino. El tamaño no importa, la presencia sí.</p>
-        <button>Yo quiero</button>
-      </div>
-      <div class="producto">
-        <img src="imagenes/like-a-virgin.jpg" alt="Like a Virgin">
-        <h3>Like a Virgin</h3>
-        <p>Gel tonificante vaginal que enciende la curiosidad y eleva las ganas.</p>
-        <button>Yo quiero</button>
-      </div>
-    </section>
-
-    <section class="productos">
-      <h2>Packs Ritual</h2>
-      <div class="producto">
-        <img src="imagenes/encenderte.jpg" alt="Pack Encenderte">
-        <h3>Encenderte</h3>
-        <p>Feromonas, líquido vibrador y vela de masaje.</p>
-        <button>Yo quiero</button>
-      </div>
-      <div class="producto">
-        <img src="imagenes/elixir-del-fuego.jpg" alt="Elixir del fuego">
-        <h3>Elixir del fuego</h3>
-        <p>Lubricante, aceite, juego de 30 días y carta de bienvenida.</p>
-        <button>Yo quiero</button>
-      </div>
-      <div class="producto">
-        <img src="imagenes/orgullo-presente.jpg" alt="Orgullo Presente">
-        <h3>Orgullo presente</h3>
-        <p>Hucha/taza bandera, feromonas a elección, sex card gay o lesbiana, lubricante y carta orgullo.</p>
-        <button>Yo quiero</button>
-      </div>
-      <div class="producto">
-        <img src="imagenes/desobediente.jpg" alt="Desobediente">
-        <h3>Desobediente</h3>
-        <p>BDSM, osito fetiche, lubricante y tarjeta de seguridad.</p>
-        <button>Yo quiero</button>
-      </div>
-    </section>
-
-    <section class="productos">
-      <h2>Placer Compartido</h2>
-      <div class="producto">
-        <img src="imagenes/pinza-app.jpg" alt="Pinza con app">
-        <h3>Pinza con app</h3>
-        <p>Control remoto para fantasías a distancia.</p>
-        <button>Yo quiero</button>
-      </div>
-      <div class="producto">
-        <img src="imagenes/anillo-vibrador.jpg" alt="Anillo vibrador">
-        <h3>Anillo vibrador</h3>
-        <p>Placer mutuo en cada movimiento. Juguete en equipo.</p>
-        <button>Yo quiero</button>
-      </div>
-      <div class="producto">
-        <img src="imagenes/plug-anal.jpg" alt="Plug anal">
-        <h3>Plug anal con vibración</h3>
-        <p>Para quien sabe que hay fuego en todos los puntos.</p>
-        <button>Yo quiero</button>
-      </div>
+    <section id="experiencias">
+      <h2>Experiencias</h2>
+      <p>✨ Showrooms, charlas, cafés sin vergüenza y momentos para prender el cuerpo y la mente.<br>
+      🔥 Próximamente aquí, tu invitación directa al goce presencial.</p>
     </section>
   </main>
 
