--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Fuego Presente</title>
   <link rel="stylesheet" href="estilos.css" />
 </head>
@@ -11,50 +10,22 @@
   <header>
     <img src="imagenes/logo-cuadrado.png" alt="Logo Fuego Presente" class="logo" />
     <nav>
-      <a href="#inicio">Inicio</a>
-      <a href="#productos">Productos</a>
-      <a href="#experiencias">Experiencias</a>
-      <a href="#sobremi">Sobre mí</a>
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li><a href="experiencias.html">Experiencias</a></li>
+        <li><a href="sobremi.html">Sobre mí</a></li>
+      </ul>
     </nav>
   </header>
 
-  <main>
-    <section id="inicio">
-      <h1>Bienvenide a Fuego Presente</h1>
-      <p class="intro">Si te tratas bien, aquí tienes tu lugar. Sin máscaras, sin prisas, solo deseo real y presente.</p>
-    </section>
-
-    <section id="sobremi">
-      <h2>Soy Sandra. No vine a complacer, vine a encender.</h2>
-      <p>Fuego Presente no empezó en un Excel. Empezó en mis tripas. Hoy tiene estructura, alma y muchas ganas de prenderlo todo.<br>
-      Estudio sexología, pero no doy lecciones. Prefiero prender conversaciones, provocar preguntas y acompañar cuerpos que quieren sentirse, no solo verse.<br>
-      Este espacio no busca likes ni filtros. Busca verdad, goce y piel despierta.<br>
-      Si tú también estás en ese punto… pasa, aquí no vendemos humo, encendemos ganas.</p>
-    </section>
-
-    <section id="productos">
-      <h2>Productos</h2>
-
-      <h3>Feromonas & Magia</h3>
-      <div class="producto"><img src="imagenes/afrodita.jpg"><h4>Afrodita</h4><p>Aceite con feromonas. Diosa style.</p><button>Yo quiero</button></div>
-      <div class="producto"><img src="imagenes/apolo.jpg"><h4>Apolo</h4><p>Fuerza, magnetismo y ganas de más.</p><button>Yo quiero</button></div>
-
-      <h3>Fuego al Tacto</h3>
-      <div class="producto"><img src="imagenes/liquido-vibrador.jpg"><h4>Líquido vibrador</h4><p>Cosquilleo que te sube la temperatura.</p><button>Yo quiero</button></div>
-      <div class="producto"><img src="imagenes/like-a-virgin.jpg"><h4>Like a Virgin</h4><p>Curiosidad encendida y efecto tonificante.</p><button>Yo quiero</button></div>
-
-      <h3>Packs Ritual</h3>
-      <div class="producto"><img src="imagenes/encenderte.jpg"><h4>Encenderte</h4><p>Feromonas, vela y líquido vibrador.</p><button>Yo quiero</button></div>
-
-      <h3>Placer Compartido</h3>
-      <div class="producto"><img src="imagenes/plug-anal.jpg"><h4>Plug Anal</h4><p>Vibración para todos los puntos calientes.</p><button>Yo quiero</button></div>
-    </section>
-
-    <section id="experiencias">
-      <h2>Experiencias</h2>
-      <p>✨ Showrooms, charlas, cafés sin vergüenza y momentos para prender el cuerpo y la mente.<br>
-      🔥 Próximamente aquí, tu invitación directa al goce presencial.</p>
-    </section>
+  <main class="portada">
+    <h1>Bienvenide a Fuego Presente</h1>
+    <p>Si te tratas bien, aquí tienes tu lugar. Sin máscaras, sin prisas, solo deseo real y presente.</p>
+    <h2>Soy Sandra. No vine a complacer, vine a encender.</h2>
+    <p>Fuego Presente no empezó en un Excel. Empezó en mis tripas. Hoy tiene estructura, alma y muchas ganas de prenderlo todo.</p>
+    <p>Estudio sexología, pero no doy lecciones. Prefiero prender conversaciones, provocar preguntas y acompañar cuerpos que quieren sentirse, no solo verse.</p>
+    <p>Este espacio no busca likes ni filtros. Busca verdad, goce y piel despierta.<br/>Si tú también estás en ese punto... pasa, aquí no vendemos humo, encendemos ganas.</p>
   </main>
 
   <footer>
