--- a/index.html
+++ b/index.html
@@ -1,35 +1,93 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fuego Presente</title>
-  <link rel="stylesheet" href="estilos.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Fuego Presente</title>
+    <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
-  <header>
-    <img src="imagenes/logo-cuadrado.png" alt="Logo Fuego Presente" class="logo" />
-    <nav>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="productos.html">Productos</a></li>
-        <li><a href="experiencias.html">Experiencias</a></li>
-        <li><a href="sobremi.html">Sobre mí</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <img src="imagenes/logo-cuadrado.png" alt="Logo Fuego Presente" class="logo" />
+        <nav>
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#productos">Productos</a></li>
+                <li><a href="#experiencias">Experiencias</a></li>
+                <li><a href="#sobremi">Sobre mí</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main class="portada">
-    <h1>Bienvenide a Fuego Presente</h1>
-    <p>Si te tratas bien, aquí tienes tu lugar. Sin máscaras, sin prisas, solo deseo real y presente.</p>
-    <h2>Soy Sandra. No vine a complacer, vine a encender.</h2>
-    <p>Fuego Presente no empezó en un Excel. Empezó en mis tripas. Hoy tiene estructura, alma y muchas ganas de prenderlo todo.</p>
-    <p>Estudio sexología, pero no doy lecciones. Prefiero prender conversaciones, provocar preguntas y acompañar cuerpos que quieren sentirse, no solo verse.</p>
-    <p>Este espacio no busca likes ni filtros. Busca verdad, goce y piel despierta.<br/>Si tú también estás en ese punto... pasa, aquí no vendemos humo, encendemos ganas.</p>
-  </main>
+    <section id="inicio" class="portada">
+        <h1>Bienvenide a Fuego Presente</h1>
+        <p class="subtitulo">Si te tratas bien, aquí tienes tu lugar. Sin máscaras, sin prisas, solo deseo real y presente.</p>
+        <h2 class="frase">Soy Sandra. No vine a complacer, vine a encender.</h2>
+        <p class="presentacion">
+            Fuego Presente no empezó en un Excel. Empezó en mis tripas. Hoy tiene estructura, alma y muchas ganas de prenderlo todo.<br/>
+            Estudio sexología, pero no doy lecciones. Prefiero prender conversaciones, provocar preguntas y acompañar cuerpos que quieren sentirse, no solo verse.<br/>
+            Este espacio no busca likes ni filtros. Busca verdad, goce y piel despierta.<br/>
+            Si tú también estás en ese punto… pasa, aquí no vendemos humo, encendemos ganas.
+        </p>
+    </section>
 
-  <footer>
-    <p>© 2025 Fuego Presente</p>
-  </footer>
+    <section id="productos">
+        <h2>Productos</h2>
+
+        <div class="subseccion"><h3>Feromonas & Magia</h3></div>
+        <div class="producto">
+            <img src="imagenes/afrodita.jpg" alt="Afrodita">
+            <h3>Afrodita</h3>
+            <p>Aceite con feromonas. Diosa style.</p>
+            <button>Yo quiero</button>
+        </div>
+        <div class="producto">
+            <img src="imagenes/apolo.jpg" alt="Apolo">
+            <h3>Apolo</h3>
+            <p>Fuerza, magnetismo y ganas de más.</p>
+            <button>Yo quiero</button>
+        </div>
+
+        <div class="subseccion"><h3>Fuego al Tacto</h3></div>
+        <div class="producto">
+            <h3>Líquido vibrador</h3>
+            <p>Cosquilleo que te sube la temperatura</p>
+            <button>Yo quiero</button>
+        </div>
+        <div class="producto">
+            <h3>Like a Virgin</h3>
+            <p>Curiosidad encendida y efecto tonificante</p>
+            <button>Yo quiero</button>
+        </div>
+
+        <div class="subseccion"><h3>Packs Ritual</h3></div>
+        <div class="producto">
+            <h3>Encenderte</h3>
+            <p>Feromonas, vela y líquido vibrador</p>
+            <button>Yo quiero</button>
+        </div>
+
+        <div class="subseccion"><h3>Placer Compartido</h3></div>
+        <div class="producto">
+            <h3>Plug Anal</h3>
+            <p>Vibración para todos los puntos calientes</p>
+            <button>Yo quiero</button>
+        </div>
+    </section>
+
+    <section id="experiencias">
+        <h2>Experiencias</h2>
+        <p>✨ Showrooms, charlas, cafés sin vergüenza y momentos para prender el cuerpo y la mente.</p>
+        <p>📍 Próximamente aquí, tu invitación directa al goce presencial</p>
+    </section>
+
+    <section id="sobremi">
+        <h2>Sobre mí</h2>
+        <p>Muy pronto, mi historia y el por qué de todo este fuego.</p>
+    </section>
+
+    <footer>
+        <p>© 2025 Fuego Presente</p>
+    </footer>
 </body>
 </html>
